[package]
name = "blarun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
git2 = "^0.18"  
log = "0.4.20"
tempfile = "3.9.0"
