[package]
name = "blarun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.0"
git2 = "^0.18"  
log = "0.4.20"
tempfile = "3.9.0"
serde = { version = "^1", features = ["derive"] }
serde_with = "3.5.0"
wait-timeout = "0.2.0"

